--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,22 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: "Inter", sans-serif;
-}
-
-a {
-  color: #84309c;
-  text-decoration: none;
-}
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
 
 * {
-  box-sizing: border-box;
-}
-
-body {
-  color: #e7e8e8;
-  background: #070707;
+  padding: 0;
+  margin: 0;
+  font-family: "Ubuntu", sans-serif;
+  @apply scrollbar-thin scrollbar-track-transparent scrollbar-thumb-primary;
 }
